--- a/src/main/webapp/opd_search_pre_bill.xhtml
+++ b/src/main/webapp/opd_search_pre_bill.xhtml
@@ -12,7 +12,8 @@
                 <h:form>
                     <p:panel>
                         <f:facet name="header" >
-                            <h:outputLabel value="Opd Bill Search To Pay "/>
+                            <h:outputText styleClass="fas fa-search" />
+                            <h:outputLabel class="mx-4" value="Opd Bill Search To Pay "/>
                         </f:facet>
 
                         <h:panelGrid columns="5">
