--- a/src/main/webapp/opd_search_pre_batch_bill.xhtml
+++ b/src/main/webapp/opd_search_pre_batch_bill.xhtml
@@ -16,110 +16,117 @@
                             <h:outputLabel class="mx-4" value="Opd Bill Search To Pay "/>
                         </f:facet>
 
-                        <h:panelGrid columns="7">
-                            <p:calendar id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
-                            </p:calendar>
-                            <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
-                            </p:calendar>
-                            <p:commandButton class="mx-1 ui-button-success" icon="fas fa-search" id="btnSearch" ajax="false" value="Search All" action="#{searchController.createOpdBathcBillPreTable}"/>
-                            <p:commandButton class="ui-button-warning" icon="fas fa-search" id="btnSearch2" ajax="false" value="Search Paid Only" action="#{searchController.createOpdBathcBillPreTablePaidOnly}"/>
-                            <p:commandButton class="mx-1 ui-button-warning" icon="fas fa-search" id="btnSearch3" ajax="false" value="Search Not Paid Only" action="#{searchController.createOpdBathcBillPreTableNotPaidOly}"/>
-                            
-                            <p:commandButton class="ui-button-info" icon="fas fa-search" ajax="false" value="Pharmacy Payment" action="/pharmacy/pharmacy_search_pre_bill.xhtml"/>
+                        <div class="row">
+                            <div class="col-2">
+                                <h:panelGrid columns="1">
+                                    <h:outputLabel class="my-1"  value="From Date"/>
+                                    <p:calendar class="my-1 w-100" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                                    </p:calendar>
+                                    <h:outputLabel value="To Date"/>
+                                    <p:calendar class="my-1 w-100" id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                                    </p:calendar>
+                                    <p:commandButton class="my-1 ui-button-success w-100" icon="fas fa-search" id="btnSearch" ajax="false" value="Search All" action="#{searchController.createOpdBathcBillPreTable}"/>
+                                    <p:commandButton class="ui-button-warning w-100" icon="fas fa-search" id="btnSearch2" ajax="false" value="Search Paid Only" action="#{searchController.createOpdBathcBillPreTablePaidOnly}"/>
+                                    <p:commandButton class="my-1 ui-button-warning w-100" icon="fas fa-search" id="btnSearch3" ajax="false" value="Search Not Paid Only" action="#{searchController.createOpdBathcBillPreTableNotPaidOly}"/>
 
-                        </h:panelGrid>
+                                    <p:commandButton class="ui-button-info w-100" icon="fas fa-search" ajax="false" value="Pharmacy Payment" action="/pharmacy/pharmacy_search_pre_bill.xhtml"/>
 
-                        <h:panelGrid columns="7" >
-                            <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
-                            <h:outputLabel value="Bill No"/>
-                            <h:outputLabel value="Patient Name"/>                               
-                            <h:outputLabel value="Total"/>
-                            <h:outputLabel value="Net Total"/>   
-                            <h:outputLabel/><h:outputLabel/><h:outputLabel/>
+                                </h:panelGrid>
 
-                            <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
-                            <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
-                            <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.total}" />
-                            <p:inputText autocomplete="off" value="#{searchController.searchKeyword.netTotal}"/>
-                            <h:outputLabel/><h:outputLabel/><h:outputLabel/>
+                            </div>
+                            <div class="col-10">
+                                <h:panelGrid columns="7" >
+                                    <p:spacer height="30"/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/><h:outputLabel/>
+                                    <h:outputLabel value="Bill No"/>
+                                    <h:outputLabel value="Patient Name"/>                               
+                                    <h:outputLabel value="Total"/>
+                                    <h:outputLabel value="Net Total"/>   
+                                    <h:outputLabel/><h:outputLabel/><h:outputLabel/>
 
-                        </h:panelGrid>
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.billNo}" />
+                                    <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" />
+                                    <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.total}" />
+                                    <p:inputText autocomplete="off" value="#{searchController.searchKeyword.netTotal}"/>
+                                    <h:outputLabel/><h:outputLabel/><h:outputLabel/>
+
+                                </h:panelGrid>
 
 
-                        <p:defaultCommand target="btnSearch"/>
+                                <p:defaultCommand target="btnSearch"/>
 
-                        <p:dataTable 
-                            rowIndexVar="i"
-                            id="tblBills" 
-                            value="#{searchController.aceptPaymentBills}" 
-                            var="bill"   
-                            paginator="true"
-                            paginatorPosition="bottom"
-                            paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                            rowsPerPageTemplate="5,10,15"
-                            class="my-4"
-                            >
+                                <p:dataTable 
+                                    rowIndexVar="i"
+                                    id="tblBills" 
+                                    value="#{searchController.aceptPaymentBills}" 
+                                    var="bill"   
+                                    paginator="true"
+                                    paginatorPosition="bottom"
+                                    paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                    rowsPerPageTemplate="5,10,15"
+                                    class="my-4"
+                                    >
 
-                            <p:column headerText="No" styleClass="alignTop">
-                                <h:outputLabel value="#{i+1}"/>
-                            </p:column>
+                                    <p:column headerText="No" styleClass="alignTop">
+                                        <h:outputLabel value="#{i+1}"/>
+                                    </p:column>
 
-                            <p:column headerText="Bill No" >
-                                <h:outputLabel value="#{bill.deptId}"  ></h:outputLabel>
-                            </p:column>   
-                            <p:column headerText="Name" >
-                                <h:outputLabel value="#{bill.patient.person.nameWithTitle}"  ></h:outputLabel>
-                            </p:column>   
-                            <p:column headerText="Billed at"  >
-                                <h:outputLabel value="#{bill.createdAt}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                </h:outputLabel>
-                                <br/>
-                                <h:panelGroup rendered="#{bill.cancelled}" >
-                                    <h:outputLabel style="color: red;" value="Cancelled at " />
-                                    <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" 
-                                                   value="#{bill.cancelledBill.createdAt}" >
-                                        <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
-                                    </h:outputLabel>
-                                </h:panelGroup>                             
-                            </p:column>                 
-                            <p:column headerText="Billed by" >
-                                <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
-                                </h:outputLabel>
-                                <br/>
-                                <h:panelGroup rendered="#{bill.cancelled}" >
-                                    <h:outputLabel style="color: red;" value="Cancelled By " />
-                                    <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.creater.webUserPerson.name}" >                                       
-                                    </h:outputLabel>
-                                </h:panelGroup>                               
-                            </p:column>  
-                            <p:column headerText="Net Value" style="text-align: right; padding-right: 10px;" >
+                                    <p:column headerText="Bill No" >
+                                        <h:outputLabel value="#{bill.deptId}"  ></h:outputLabel>
+                                    </p:column>   
+                                    <p:column headerText="Name" >
+                                        <h:outputLabel value="#{bill.patient.person.nameWithTitle}"  ></h:outputLabel>
+                                    </p:column>   
+                                    <p:column headerText="Billed at"  >
+                                        <h:outputLabel value="#{bill.createdAt}" >
+                                            <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                        </h:outputLabel>
+                                        <br/>
+                                        <h:panelGroup rendered="#{bill.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled at " />
+                                            <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" 
+                                                           value="#{bill.cancelledBill.createdAt}" >
+                                                <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
+                                            </h:outputLabel>
+                                        </h:panelGroup>                             
+                                    </p:column>                 
+                                    <p:column headerText="Billed by" >
+                                        <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
+                                        </h:outputLabel>
+                                        <br/>
+                                        <h:panelGroup rendered="#{bill.cancelled}" >
+                                            <h:outputLabel style="color: red;" value="Cancelled By " />
+                                            <h:outputLabel style="color: red;" rendered="#{bill.cancelled}" value="#{bill.cancelledBill.creater.webUserPerson.name}" >                                       
+                                            </h:outputLabel>
+                                        </h:panelGroup>                               
+                                    </p:column>  
+                                    <p:column headerText="Net Value" style="text-align: right; padding-right: 10px;" >
 
-                                <h:outputLabel value="#{bill.total - bill.discount}" >
-                                    <f:convertNumber pattern="#,##0.00"/>
-                                </h:outputLabel>
+                                        <h:outputLabel value="#{bill.total - bill.discount}" >
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>
 
-                            </p:column>
+                                    </p:column>
 
-                            <p:column headerText="Accept">
-                                #{bill.referenceBill.balance}
-                                <p:commandButton ajax="false"  value="Accept Payment" 
-                                                 action="#{opdPreSettleController.toSettleBatch(bill)}" 
-                                                 disabled="#{(bill.referenceBill.balance le 0.0 )or bill.cancelled}" >
-                                </p:commandButton>
-                            </p:column>
+                                    <p:column headerText="Accept">
+                                        #{bill.referenceBill.balance}
+                                        <p:commandButton ajax="false"  value="Accept Payment" 
+                                                         action="#{opdPreSettleController.toSettleBatch(bill)}" 
+                                                         disabled="#{(bill.referenceBill.balance le 0.0 )or bill.cancelled}" >
+                                        </p:commandButton>
+                                    </p:column>
 
-                            <p:column headerText="Reprint">
-                                <p:commandButton ajax="false"  
-                                                 value="Reprint" 
-                                                 action="bill_print" 
-                                                 disabled="#{bill.referenceBill.balance ge 0.0}" >
-                                    <f:setPropertyActionListener value="#{bill.referenceBill.forwardReferenceBills}" target="#{opdPreBillController.bills}" />
-                                </p:commandButton>
-                            </p:column>
+                                    <p:column headerText="Reprint">
+                                        <p:commandButton ajax="false"  
+                                                         value="Reprint" 
+                                                         action="bill_print" 
+                                                         disabled="#{bill.referenceBill.balance ge 0.0}" >
+                                            <f:setPropertyActionListener value="#{bill.referenceBill.forwardReferenceBills}" target="#{opdPreBillController.bills}" />
+                                        </p:commandButton>
+                                    </p:column>
 
-                        </p:dataTable>
-
+                                </p:dataTable>
+                            </div>
+                        </div>
 
                     </p:panel>
 
