--- a/src/main/webapp/opd_search_pre_bill.xhtml
+++ b/src/main/webapp/opd_search_pre_bill.xhtml
@@ -10,7 +10,7 @@
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <p:panel>
+                    <p:panel style="height: 100vh">
                         <f:facet name="header" >
                             <h:outputText styleClass="fas fa-search" />
                             <h:outputLabel class="mx-4" value="Opd Bill Search To Pay "/>
